# calc_irr

./: pyproject.toml
src/: calc_irr.py  irr.py  irr2.py  utils.py
