[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "irr-calc"
version = "0.1.0"
description = "IRR calculation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["IRR"]
dependencies = []

[project.optional-dependencies]
data = ["pandas>=2.2", "numpy>=1.26"]
dev = ["pytest>=8.0", "ruff>=0.6", "pyright>=1.1"]

[project.urls]
Homepage = "https://example.com"

[tool.ruff]
line-length = 100
target-version = "py310"
